--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "hiredis": "~0.1.17",
     "express": "~4.8.2",
     "body-parser": "~1.6.2",
-    "method-override": "~2.1.2"
+    "method-override": "~2.1.2",
+    "errorhandler": "~1.2.0"
+  },
+  "devDependencies": {
+    "mocha": "~1.21.4",
+    "chai": "~1.9.1"
   }
 }
